fix navbar word wrapping causing disappearing (bug 1058260)

--- a/src/media/css/navbar.styl
+++ b/src/media/css/navbar.styl
@@ -102,6 +102,7 @@
             top: 0;
             transition(unquote('right .5s ease-out, left .3s ease-in'));
             width: 100%;
+            white-space: nowrap;
 
             // Toggle navbars.
             &.nav-mkt {
